# znews

./: .env.example  .gitignore  Dockerfile.prod  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  jest.config.js  package.json  prompt.txt  tsconfig.json  turbo.json
.github/workflows/: cd.yml  ci.yml  security-audit.yml
apps/crawler/: Makefile  crawler.go  crawler_test.go  go.mod
apps/discovery-service/: pyproject.toml
apps/discovery-service/tests/: test_discovery.py
apps/feed-service/: package.json  tsconfig.json
apps/feed-service/src/: app.module.ts  feed.service.spec.ts
apps/feed-service/src/articles/: articles.service.ts
apps/feed-service/src/auth/: auth.service.ts
apps/feed-service/src/feed/: feed.service.ts
apps/feed-service/src/sources/: sources.service.ts
apps/feed-service/src/users/: users.service.ts
docker/postgres/: init.sql
docs/: architecture.md  ci-pipeline.md  docker-setup.md  features.md  implementation-plan.md  problem-statement.md  techstack.md
